feat: 대기방 추가가

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,16 +1,21 @@
 :root {
+  /*폰트 설정*/
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  /*글자색*/
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  /*폰트 렌더링 최적화*/
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /*배경화면 설정*/
+  background-image: url("assets/table.png");  /* 배경 이미지 */
+  background-size: cover;                     /* 꽉 채우기 */
+  background-position: center;                /* 가운데 정렬 */
+  background-repeat: no-repeat;               /* 반복 없애기 */
 }
 
 a {
@@ -26,43 +31,11 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+
   min-height: 100vh;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
