--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,9 @@
 :root {
   /*폰트 설정*/
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   /*글자색*/
-
   color: rgba(255, 255, 255, 0.87);
   /*폰트 렌더링 최적화*/
   font-synthesis: none;
@@ -16,25 +15,22 @@
   background-size: cover;                     /* 꽉 채우기 */
   background-position: center;                /* 가운데 정렬 */
   background-repeat: no-repeat;               /* 반복 없애기 */
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  min-height: 100vh;
 }
 
 body {
   margin: 0;
+  width: 100%;
+  height: 100dvh;
+  overflow: hidden;
+
   display: flex;
-  place-items: center;
+  justify-content: center; /* 가로 중앙 */
+  align-items: center;     /* 세로 중앙 */
+  text-align: center;      /* 텍스트 중앙 정렬 (inline 요소용) */
 
-  min-height: 100vh;
+  position: relative;      /* absolute 자식 기준으로 사용 */
 }
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
