--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,7 +22,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100dvh;
-  overflow: hidden;
+  overflow: hidden;        /* 페이지 스크롤 방지 */
 
   display: flex;
   justify-content: center; /* 가로 중앙 */
